--- a/css/colour.css
+++ b/css/colour.css
@@ -1,4 +1,4 @@
-/* Namari Landing Page Dynamic Style Index
+/* Landing Page Dynamic Style Index
 
 1. Website Default Styling
 2. Navigation
@@ -9,40 +9,52 @@
 7. Footer
 
 
+*/
+
+/*
+Theme Colours:
+*/
+
+:root {
+    --blue-accent: #4d91ff;
+    --dark-accent: #111;
+}
+
+
 /*------------------------------------------------------------------------------------------*/
 /* 1. Website Default Styling */
 /*------------------------------------------------------------------------------------------*/
+
 
 
 body {
     background:#fff;
 }
 
-
 /* Default Link Color */
 
 a, .la-ball-triangle-path {
-    color:#d2b356;
+    color: var(--blue-accent);
 }
 
 a:hover, #header.nav-solid nav a:hover {
-    color:#d2b356;
+    color:var(--blue-accent);
 }
 
 /* Default Icon Color */
 
 .icon i {
-    color:#d2b356;
+    color:var(--blue-accent);
 }
 
 /* Border Color */
 
 #banner .section-heading:before, .testimonial.classic footer:before {
-    background: #d2b356;
+    background: var(--blue-accent);
 }
 
 .pricing-block-content:hover {
-    border-color:#d2b356;
+    border-color:var(--blue-accent);
 }
 
 
@@ -68,8 +80,8 @@ a:hover, #header.nav-solid nav a:hover {
 /* Navigation Active State */
 
 #header.nav-solid .active {
-    color: #d2b356;
-    border-color: #d2b356;
+    color: var(--blue-accent);
+    border-color: var(--blue-accent);
 }    
 
 
@@ -82,7 +94,7 @@ a:hover, #header.nav-solid nav a:hover {
 /* Primary Background and Text Colors */
 
 .primary-color, .featured .pricing {
-    background-color:#d2b356;
+    background-color:var(--blue-accent);
 }
 
 .primary-color, .primary-color .section-title, .primary-color .section-subtitle, .featured .pricing, .featured .pricing p {
@@ -90,7 +102,7 @@ a:hover, #header.nav-solid nav a:hover {
 }
 
 .section-heading h2:after {
-    background:#d2b356;
+    background:var(--blue-accent);
     content:"";
     display:block;
     width:30px;
@@ -124,7 +136,7 @@ a:hover, #header.nav-solid nav a:hover {
 /* Banner Background and Text Colors */
 
 #banner {
-    background: url("../images/banner-images/banner-image-1.jpg") no-repeat center top;
+    background: url("../images/hero.svg") no-repeat center top;
     background-size:cover;
 }
 
@@ -279,8 +291,8 @@ h6 {
 /* Button Hover Color */
 
 .button:hover,  input[type="submit"]:hover {
-    border-color:#d2b356;
-    color:#d2b356;
+    border-color:var(--blue-accent);
+    color:var(--blue-accent);
 }
 
 
@@ -291,23 +303,23 @@ h6 {
 
 #banner .button {
     font-family: 'Open Sans', sans-serif, Arial, Helvetica;
-    font-size:16px;
-    color:#111;
+    font-size: 16px;
+    color: #111;
 }
 
 
 /* Button Color */
 
 #banner .button {
-    border-color:#111;
+    border-color: #111;
 }
 
 
 /* Button Hover Color */
 
 #banner .button:hover {
-    color:#d2b356;
-    border-color:#d2b356;
+    color: var(--blue-accent);
+    border-color: var(--blue-accent);
 }
 
 
@@ -317,13 +329,13 @@ h6 {
 
 #landing-footer, #landing-footer p, #landing-footer a {
     font-family: 'Open Sans', sans-serif, Arial, Helvetica;
-    font-size:12px;
+    font-size: 12px;
     font-weight:normal;
-    color:#999;
+    color: #999;
 }
 
 /* Footer Icon Color */
 
 #landing-footer i {
-    color:#999;
+    color: #999;
 }
