--- a/css/style.css
+++ b/css/style.css
@@ -1580,8 +1580,8 @@ blockquote {
     width: 110px;
     height: 110px;
     position: absolute;
-    left: 50%; /* centers the loading animation horizontally one the screen */
-    top: 50%; /* centers the loading animation vertically one the screen */
+    left: 50vw; /* centers the loading animation horizontally one the screen */
+    top: 50vh; /* centers the loading animation vertically one the screen */
     background-position: center;
     margin: -55px 0 0 -55px; /* is width and height divided by two */
     text-align: center;
