--- a/css/style.css
+++ b/css/style.css
@@ -1167,6 +1167,15 @@ blockquote {
         max-width: 50%;
     }
 
+    .pricing-block-content {
+        background: #fff;
+        padding: 25px 0 25px 0;
+        box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.07);
+        transition: none;
+        position: relative;
+        border: 10px solid #fff;
+    }
+
 }
 
 /* Gallery Styling */
@@ -1405,8 +1414,7 @@ blockquote {
 .client-overlay {
     background: rgba(0, 0, 0, 0.8);
     position: absolute;
-    top;
-    0;
+    top: 0;
     right: 0;
     bottom: 0;
     left: 0;
