--- a/css/colour.css
+++ b/css/colour.css
@@ -136,15 +136,30 @@ a:hover, #header.nav-solid nav a:hover {
 /* Banner Background and Text Colors */
 
 #banner {
-    background: url("../images/hero.svg") no-repeat center top;
+    background: url("../images/house-interior-1.jpg") no-repeat center top;
     background-size: cover;
+}
+
+#services {
+    background-image: url('../images/house-interior-3-1.jpg');
+    background-size: cover;
+    background-position: center 20%;
 }
 
 /* background image for phone */
 @media only screen and (max-width: 1024px) { 
     #banner {
-        background-color: #f9f9fd;
-        background: #f9f9fd;
+        /*background-color: #f9f9fd;
+        background: #f9f9fd;*/
+        background: url("../images/house-interior-1-resp.jpg") no-repeat right top;
+        background-size: cover;
+        background-position: right 0px;
+    }
+
+    #services {
+        background-image: url('../images/house-interior-3-4.jpg');
+        background-size: cover;
+        background-position: top left;
     }
     
     .fadeInUp {
@@ -298,7 +313,8 @@ h6 {
 /* Button Color */
 
 .button, input[type="submit"] {
-    border-color:#111;
+    border-color: #111;
+    background-color: white;
 }
 
 
