--- a/css/faq.css
+++ b/css/faq.css
@@ -3,8 +3,6 @@
     padding: 4rem;
     width: 80%;
 }
-  
-@import url("https://fonts.googleapis.com/css?family=Montserrat");
 
 .faq-container h1 {
     text-align: center;
@@ -23,8 +21,9 @@
   background-color: #fff;
   color: #111;
   margin: 1rem 0;
-  border-radius: 0.5rem;
-  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.25);
+  /*border-radius: 0.5rem; */
+  /* box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.25); */
+  box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.25);
 }
 
 .accordion-item-header:hover {
