--- a/css/colour.css
+++ b/css/colour.css
@@ -101,7 +101,7 @@ a:hover, #header.nav-solid nav a:hover {
     color:#fff;    
 }
 
-.section-heading h2:after {
+.section-heading .main-trading:after {
     background:var(--blue-accent);
     content:"";
     display:block;
@@ -110,8 +110,8 @@ a:hover, #header.nav-solid nav a:hover {
     margin-top:30px;
 }
 
-.text-center .section-heading h2:after {
-    margin:30px auto 25px auto;
+.text-center .section-heading .main-trading:after:after {
+    margin: 30px auto 0px auto;
 }
 
 /* Primary Icon Colors */
