--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,9 @@ p {
     display: none;
 }
 
+.call-text {
+    content: "CALL <i>0422 695 551</i> FOR A QUOTE";
+}
 
 a {
     text-decoration: none;
@@ -1302,6 +1305,10 @@ blockquote {
         top: 10px;
         right: 10px;
         left: 85%;
+    }
+
+    .phone-text {
+        content: "CALL FOR A QUOTE";
     }
 
     .featherlight-previous {
