--- a/css/colour.css
+++ b/css/colour.css
@@ -101,7 +101,7 @@ a:hover, #header.nav-solid nav a:hover {
     color:#fff;    
 }
 
-.section-heading .main-trading:after {
+.section-heading:after {
     background:var(--blue-accent);
     content:"";
     display:block;
@@ -110,7 +110,7 @@ a:hover, #header.nav-solid nav a:hover {
     margin-top:30px;
 }
 
-.text-center .section-heading .main-trading:after:after {
+.text-center .section-heading:after {
     margin: 30px auto 0px auto;
 }
 
@@ -401,4 +401,14 @@ h6 {
     margin-bottom: 0;
     margin-top: .45rem;
     color: var(--blue-accent);
+}
+
+
+.step-icon i::before {
+    background-image: url(../images/wood.jpeg);
+    background-repeat: repeat;
+    -webkit-font-smoothing: antialiased;
+    -webkit-background-clip: text;
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
 }
